cloud-to-cloud-network-test/frontend/src/app/dashboard/dashboard.component.scss
.card-radious-none {
  border-radius: 0px;
}

.sebm-google-map-container {
  height: 300px;
}

.test-card-height {
  height: 281px;
}

.card-title-margin {
  margin-top: 5px !important;
  margin-bottom: 5px !important;
  font-weight: 500;
  text-transform: uppercase;
  opacity: 0.9; // font-size: 14px;
  // color: #666666;
  font-size: 14px !important;
  color: #757575 !important; //letter-spacing: 0.19px !important;
  line-height: 18px !important;
  letter-spacing: 0px !important;
}

.value-color {
  color: #7bcef3;
}

.card-header {
  background-color: #FFFFFF;
  padding-top: 0.40rem !important;
  padding-bottom: 0.40rem !important;
  border-bottom: none;
}

.column-header {
  cursor: pointer;
  color: #666666;
  font-weight: 500
}

.sort-style {
  opacity: 0.8;
}

.chart-height {
  height: 300px !important;
}

.info-color {
  color: rgba(0, 0, 0, 0.64); // margin-top: 10px;
}

.loader-style {
  // float: right;
  margin-top: 5px;
}

.card {
  border: none;
  background: #FFFFFF;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.12);
}

.btn-start {
  float: right; // margin-right: 10px; 
  color: #FFFFFF;
  background-color: #2196F3;
  cursor: pointer;
  margin-top: -5px;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.22);
}

.btn-start:disabled {
  cursor: not-allowed; // opacity: .5;
  -webkit-transform: scale(1.0);
  transform: scale(1.0);
  color: #DCDCDC;
}

.btn-stop {
  float: right; // margin-right: 10px; 
  color: #FFFFFF;
  background-color: #F44336;
  cursor: pointer;
  margin-top: -8px;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.22);
}

.btn-stop:disabled {
  cursor: not-allowed; // opacity: .5;
  -webkit-transform: scale(1.0);
  transform: scale(1.0);
  color: #DCDCDC;
}

.fa-lg {
  font-size: 1.2em !important;
}

.mat-tooltip {
  font-size: 14px !important;
}

.btn-download {
  // float: right; 
  margin-right: 10px;
  color: #FFFFFF !important;
  background-color: #ee7700;
  cursor: pointer;
  border-color: #ee7700;
  font-size: 20px;
  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.22);
}

.btn-download:hover {
  // float: right; 
  margin-right: 10px;
  color: #FFFFFF !important;
  background-color: #ee7700;
  cursor: pointer;
  border-color: #ee7700;
}

.btn-download:focus,
.btn-download.focus {
  outline: 0;
  box-shadow: 0 0 0 2px #ee7700 !important;
  color: #FFFFFF !important;
  border-color: #ee7700;
}

.interested-text-style {
  margin-bottom: 5px !important;
  line-height: 0px !important;
  font-weight: 400;
}

.margin-top-50 {
  margin-top: 50px;
}

.margin-top-10 {
  margin-top: 10px;
}

.map-container {
  height: 300px;
}

.leaflet-container {
  z-index: 1;
}

.leaflet-marker-icon {
  height: 39px !important;
  width: 22px !important;
  margin-left: -11px !important;
  margin-top: -39px !important;
}

.leaflet-popup {
  bottom: 10px !important;
}

.leaflet-popup-close-button {
  display: none;
  opacity: 0;
}

.leaflet-control-attribution {
  display: none !important;
}

#chartdiv {
  width: 100%;
  height: 300px;
}

.amcharts-chart-div a {
  display: none !important;
  opacity: 0 !important;
}

a:focus,
a:hover {
  color: inherit;
  text-decoration: none;
}

.sb-style .sb-button {
  min-width: 25px !important;
  height: 35px !important;
  margin-top: 0px;
}

.sb-style button {
  padding-top: 5px !important;
}

.mat-tab-label {
  line-height: 48px;
  height: 48px;
  padding: 0 12px;
  font-size: 14px;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  font-weight: 500;
  cursor: pointer;
  box-sizing: border-box;
  color: currentColor;
  opacity: .6;
  min-width: 160px !important;
  text-align: center;
  position: relative;
}

.mat-ink-bar {
  background-color: #c65030 !important;
}

.next_btn {
  padding: 0;
  border: none;
  background: none;
  color: #2196F3;
}

.next_btn_disabled {
  float: right; // margin-right: 10px; 
  color: #FFFFFF;
  background-color: #545454;
  cursor: pointer;
  margin-top: -5px;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.22);
  transform: initial !important;
}

.selected-menu-tab {
  text-align: center;
  font-weight: 500;
  padding-bottom: 15px;
  cursor: pointer;
}

.menu-tab {
  text-align: center;
  font-weight: 500;
  padding-bottom: 15px;
  cursor: pointer;
  color: #cfcfcf;
}

.completed-menu-tab {
  text-align: center;
  font-weight: 500;
  padding-bottom: 15px;
  cursor: pointer;
  color: #86A058;
  ;
}

.cart-header-right-panel {
  margin-bottom: 25px;
  padding: 0.75rem 0.0rem;
}

.menu-tab-header {
  border-bottom: 1px solid #e0e0e0;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 12px;
}

.source-cloud-drop-down {
  margin-top: 45px;
  margin-bottom: 10px;
  font-weight: 500;
}

.selected-azure-menu {
  padding: 10px 0px 10px 0px;
  border: none;
  background: none;
  color: #c65030;
  font-size: 14px;
  font-weight: 600;
}

.azure-menu {
  padding: 10px 0px 10px 7px;
  border: none;
  background: none;
  font-size: 14px;
}

.selected-aws-menu {
  padding: 0px 0px 10px 0px;
  border: none;
  background: none;
  color: #c65030;
  font-size: 14px;
  font-weight: 600;
}

.aws-menu {
  padding: 0px 0px 10px 7px;
  border: none;
  background: none;
  font-size: 14px;
}

.selected-gce-menu {
  padding: 0px 0px 10px 0px;
  border: none;
  background: none;
  color: #c65030;
  font-size: 14px;
  font-weight: 600;
}

.active-back-button {
  float: left; // margin-right: 10px; 
  color: #2196F3 !important;
  // background-color: #2196F3 !important;
  cursor: pointer;
  //margin-top: -5px;
  //box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.22);
  //outline: none;
  //width: 108px;
}

.back-button {
  padding: 0;
  border: none;
  background: none;
}

.non-active-destination-menu {
  padding: 7px;
  color: #cfcfcf;
}

.active-destination-menu {
  position: relative;
  background: #fc8768;
  border: 1px solid #fc8768;
  padding: 7px;
  color: #FFFFFF;
}

.active-destination-menu:after,
.active-destination-menu:before {
  top: 100%;
  left: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.active-destination-menu:after {
  border-color: rgba(136, 183, 213, 0);
  border-top-color: #fc8768;
  border-width: 8px;
  margin-left: -10px;
}

.active-destination-menu:before {
  border-color: rgba(194, 225, 245, 0);
  border-top-color: #fc8768;
  border-width: 8px;
  margin-left: -10px;
}

.bubble {
  border-radius: 1000px;
  width: 14px;
  height: 14px;
  background-color: #bbb;
  display: block;
  margin: 0 auto .5em;
}

.tab-btn {
  z-index: 1;
}

.tab-btn .bubble:after,
.tab-btn .bubble:before {
  display: block;
  position: absolute;
  top: 6px;
  width: 50%;
  height: 3px;
  content: '';
  background-color: #bbb;
  z-index: -1;
}

.tab-btn:last-child .bubble:after,
.tab-btn:last-child .bubble:before {
  width: 50%;
  margin-right: 50%;
}

.tab-btn:first-child .bubble:after,
.tab-btn:first-child .bubble:before {
  width: 50%;
  margin-left: 50%;
}

.bubble:before {
  left: 0;
}

.bubble:after {
  right: 0;
}

.completed-menu-tab .bubble {
  background: #86A058;
  box-shadow: 0 0 0 2px #fff inset;
  box-sizing: border-box;
  border: 1px solid #86A058;
}

.selected-menu-tab .bubble {
  background: #474747;
  box-shadow: 0 0 0 2px #fff inset;
  box-sizing: border-box;
  border: 1px solid #474747;
}


.after-sselection-source-cloud {
  border: 0;
  outline: 0;
  background: transparent;
  border-bottom: 1px solid #a8a8a8;
  margin-bottom: 15px;
  width: 200px;
}

.before-sselection-source-cloud {
  border: 0;
  outline: 0;
  background: transparent;
  border-bottom: 1px solid #a8a8a8;
  margin-bottom: 15px;
  width: 200px;
  color: #a8a8a8;
}

.before-selection-source-region {
  border: 0;
  outline: 0;
  background: transparent;
  border-bottom: 1px solid #a8a8a8;
  width: 200px;
  color: #a8a8a8;
}

.after-selection-source-region {
  border: 0;
  outline: 0;
  background: transparent;
  border-bottom: 1px solid #a8a8a8;
  width: 200px;
}

.clock {
  //margin-top: 7px;
  transform: rotate(90deg);
  margin-right: 7px;
  width: 20px;
  height: 20px;
  line-height: 6px;
}

.timestamp {
  //width: 115px;
  font-size: 14px;
  //border: 0;
  //outline: 0;
  //background: transparent;
  //border-bottom: 1px solid #a8a8a8;
}

.padding-0 {
  padding: 0px;
}

.height-306 {
  height: 306px;
}

.padding-right-0 {
  padding-right: 0px;
}

.padding-right-10 {
  padding-right: 10px;
}

.source-tab {
  overflow-y: auto;
  height: 175px;
  overflow-x: hidden;
}

.color-a8a8a8 {
  color: #a8a8a8;
}

.source-cloud-region-label {
  margin-bottom: 10px;
  font-weight: 500;
}

.height-170 {
  height: 175px;
}

.height-162 {
  height: 167px;
}

.destination-tab {
  margin: 0px;
  height: 33px;
  font-weight: 500;
}

.cursor-pointer {
  cursor: pointer;
}

.destination-cloud-provider {
  margin: 0px;
  margin-top: 15px;
}

.margin-right-5 {
  margin-right: 5px;
}

.destination-region {
  margin: 0px;
  margin-top: 10px;
  overflow-y: auto;
  height: 119px;
}

.padding-top-10 {
  padding-top: 10px
}

.test-source {
  margin-top: 8px;
  border-bottom: 1px solid #e0e0e0;
  margin-left: 0px;
  margin-right: 0px;
  padding-bottom: 8px;
}

.test-source-cloud-label {
  font-weight: 500;
  margin-left: -5px;
}

.test-source-region-label {
  font-weight: 500;
  margin-left: -40px;
}

.region-table-header {
  margin-bottom: 0px;
  background-color: #F8F8F8;
}

.padding-left-2 {
  padding-left: 2px;
}

.padding-left-10 {
  padding-left: 10px;
}

.padding-left-0 {
  padding-left: 0px;
}

.destination-region-table {
  overflow-y: auto;
  height: 134px;
}

.margin-right-7 {
  margin-right: 7px;
}

.width-60 {
  width: 60%;
}

.destination-region-table-column {
  width: 20%;
  padding-left: 15px
}

.empty-destination-label {
  background-color: transparent;
  margin-top: 10px;
  text-align: center;
  font-weight: 300;
  text-transform: none;
  font-size: 16px;
}

.flow-buttons-bottom {
  border-top: 1px solid #e0e0e0;
  padding-top: 15px;
}

.next-button-common {
  outline: none;
  width: 90px;
}

.outline-none {
  outline: none
}

.chart-label {
  margin-top: 0px;
  margin-bottom: 0px;
  font-weight: 300;
  text-transform: none;
}

.padding-left-right-15 {
  padding-left: 15px;
  padding-right: 15px;
}

.display-block {
  display: block;
}

.text-wrap {
  word-break: break-word;
}


.selected-menu-tab .bubble {
  box-shadow: 0 0 0 2px #fff inset;
  box-sizing: border-box;
  border: 1px solid #474747;
}


.tab-btn:last-child .bubble:after {
  display: none
}

.completed-menu-tab .bubble:after,
.completed-menu-tab .bubble:before {
  background: #86A058;
}

.selected-menu-tab .bubble:before {
  background: #86A058;
}

.tab-btn:last-child.selected-menu-tab {
  color: #86A058;
}

.tab-btn:last-child.selected-menu-tab .bubble {
  background: #86A058;
  border-color: #86A058;
  box-shadow: 0 0 0 2px #fff inset;
  box-sizing: border-box;
  border: 1px solid #86A058;
}

.incomplete-menu-tab .bubble:before {
  background: #86A058;
}

.incomplete-menu-tab .bubble:after {
  background: #BBBBBB;
}

.incomplete-dest-menu-tab .bubble:before {
  background: #BBBBBB;
}

.incomplete-dest-menu-tab .bubble {
  background-color: #474747 !important;
}

.incomplete-dest-menu-tab {
  color: #474747 !important;
}

.mat-option.mat-selected {
  color: #BBBBBB;
  font-family: sans-serif;
  font-size: 100%;
  margin: 0;
}

.mat-select:focus:not(.mat-select-disabled) .mat-select-trigger {
  font-family: sans-serif;
  font-size: 100%;
  margin: 0;
  color: #BBBBBB;
}

.mat-select-trigger {
  color: #bbb;
  font-family: sans-serif;
  font-size: 100%;
  margin: 0;
}

.mat-select-value-text {
  font-family: sans-serif;
  font-size: 14px;
  margin: 0;
}

.mat-select-placeholder {
  font-family: sans-serif;
  font-size: 14px;
  margin: 0;
}

.margin-top-35 {
  margin-top: 35px;
}

.margin-top-15 {
  margin-top: 15px;
}

.drop-down {
  //font-weight: 500;
  width: 80%
}

.padding-left-20 {
  padding-left: 20px;
}

.divider-border {
    border-right: solid 1px #e0e0e0;
}

